--- a/site/index.html
+++ b/site/index.html
@@ -2,66 +2,79 @@
 <html>
 <head>
   <title>Camera Pod</title>
-  <script type="text/javascript" src="scripts/jquery.js"></script>
-  <script type="text/javascript" src="scripts/simple-jsonrpc-js.js"></script>
+  <script type="text/javascript" src="static/scripts/jquery.js"></script>
+  <script type="text/javascript" src="static/scripts/simple-jsonrpc-js.js"></script>
   <script type="text/javascript" src="camPod.js"></script>
   <link   rel="stylesheet"       href="camPod.css">
+  <link rel="shortcut icon" type="image/jpg" href="static/images/favicon.ico">
 </head>
 <body>
-  <div>
-    <div class="row">
-      <img src="http://127.0.0.1/cameras/cam0.jpg" alt="cam0" id="cam0">
-    </div>
-    <div class="row">
-      <div class="column">
-        Preview
+
+  <div class="sidebar">
+    <a href="#">foo</a>
+    <a href="#">bar</a>
+    <a href="#">baz</a>
+    <a href="#">woo</a>
+  </div>
+
+  <div class="main">
+    <div class="cam">
+      <div class="row">
+        <div class="imgview">
+          <img src="http://127.0.0.1/cameras/cam0.jpg" alt="cam0" id="cam0">
+        </div>
       </div>
-      <div class="column">
-        <button id="btnRefresh">Refresh</button>
+      <div class="row">
+        <div class="column">
+          Preview
+        </div>
+        <div class="column">
+          <button id="btnRefresh">Refresh</button>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        Gstreamer
+      <div class="row">
+        <div class="column">
+          Gstreamer
+        </div>
+        <div class="column">
+          <button id="btnGstStart">Start</button>
+        </div>
+        <div class="column">
+          <button id="btnGstStop">Stop</button>
+        </div>
       </div>
-      <div class="column">
-        <button id="btnGstStart">Start</button>
+      <div class="row">
+        <div class="column">
+          Still Frame Capture
+        </div>
+        <div class="column">
+          <button id="btnStillStart">Start</button>
+        </div>
+        <div class="column">
+          <button id="btnStillStop">Stop</button>
+        </div>
       </div>
-      <div class="column">
-        <button id="btnGstStop">Stop</button>
+      <div class="row">
+        <div class="column">
+          Video Capture
+        </div>
+        <div class="column">
+          <button id="btnVideoStart">Start</button>
+        </div>
+        <div class="column">
+          <button id="btnVideoStop">Stop</button>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        Still Frame Capture
-      </div>
-      <div class="column">
-        <button id="btnStillStart">Start</button>
-      </div>
-      <div class="column">
-        <button id="btnStillStop">Stop</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        Video Capture
-      </div>
-      <div class="column">
-        <button id="btnVideoStart">Start</button>
-      </div>
-      <div class="column">
-        <button id="btnVideoStop">Stop</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        RTP stream
-      </div>
-      <div class="column">
-        <button id="btnRTPStreamStart">Start</button>
-      </div>
-      <div class="column">
-        <button id="btnRTPStreamStop">Stop</button>
+      <div class="row">
+        <div class="column">
+          RTP stream
+        </div>
+        <div class="column">
+          <button id="btnRTPStreamStart">Start</button>
+        </div>
+        <div class="column">
+          <button id="btnRTPStreamStop">Stop</button>
+        </div>
       </div>
     </div>
   </div>
