--- a/site/index.html
+++ b/site/index.html
@@ -76,6 +76,17 @@
           <button id="btnRTPStreamStop">Stop</button>
         </div>
       </div>
+      <div class="row">
+        <div class="column">
+          Debug
+        </div>
+        <div class="column">
+          <button id="btnGetPipelineStatus">Status</button>
+        </div>
+        <div class="column">
+          <button id="btnGetPipelineGraph">Graph</button>
+        </div>
+      </div>
     </div>
   </div>
 </body>
