--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
     <div class="cam">
       <div class="row">
         <div class="imgview">
-          <img src="http://127.0.0.1/cameras/cam0.jpg" alt="cam0" id="cam0">
+          <img src="/cameras/cam0.jpg" alt="cam0" id="cam0">
         </div>
       </div>
       <div class="row">
