--- a/site/index.html
+++ b/site/index.html
@@ -25,6 +25,12 @@
         </div>
       </div>
       <div class="row">
+        <form id="ipform">
+          <label for="client_ip">IP addr</label>
+          <input type="text" id="client_ip" name="client_ip"><br><br>
+        </form>
+      </div>
+      <div class="row">
         <div class="column">
           Preview
         </div>
