--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,12 @@
   </div>
 
   <div class="main">
+    <div class="row">
+      <div class="column">
+        OpalEYE
+      </div>
+    </div>
+
     <div class="cam">
       <div class="row">
         <div class="imgview">
