--- a/site/index.html
+++ b/site/index.html
@@ -11,10 +11,10 @@
 <body>
 
   <div class="sidebar">
-    <a href="#">foo</a>
-    <a href="#">bar</a>
-    <a href="#">baz</a>
-    <a href="#">woo</a>
+    <a href="#">CAMERA</a>
+    <a href="#sensor-table">SENSORS</a>
+    <a href="#status-table">STATUS</a>
+    <a href="#about-table">ABOUT</a>
   </div>
 
   <div class="main">
