--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="cam">
+    <div id="sensor-table" class="cam">
       <div class="row">
         <div class="imgview">
           <img src="/cameras/cam0.jpg" alt="cam0" id="cam0">
@@ -100,6 +100,19 @@
         </div>
       </div>
     </div>
+
+    <div id="status-table" class="row">
+      <div class="column">
+        STATUS
+      </div>
+    </div>
+
+    <div id="about-table" class="row">
+      <div class="column">
+        ABOUT
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
