--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div id="sensor-table" class="cam">
+    <div class="cam">
       <div class="row">
         <div class="imgview">
           <img src="/cameras/cam0.jpg" alt="cam0" id="cam0">
@@ -98,6 +98,20 @@
         <div class="column">
           <button id="btnGetPipelineGraph">Graph</button>
         </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          Clear Videos
+        </div>
+        <div class="column">
+          <button id="btnClearVideoStorage">Status</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="sensor-table" class="row">
+      <div class="column">
+        SENSOR
       </div>
     </div>
 
