try to auto refresh

--- a/site/index.html
+++ b/site/index.html
@@ -43,6 +43,9 @@
         <div class="column">
           <button id="btnRefresh">Refresh</button>
         </div>
+        <div class="column">
+          <input type="checkbox" id="cbAutoRefresh">AutoRefresh</input>
+        </div>
       </div>
       <div class="row">
         <div class="column">
