--- a/site/index.html
+++ b/site/index.html
@@ -116,6 +116,9 @@
       <div class="column">
         SENSOR
       </div>
+      <div class="column">
+        <iframe src="sensors" title="Sensor Data" style="border:none;"></iframe>
+      </div>
     </div>
 
     <div id="status-table" class="row">
