--- a/site/index.html
+++ b/site/index.html
@@ -117,7 +117,7 @@
         SENSOR
       </div>
       <div class="column">
-        <iframe src="sensors" title="Sensor Data" style="border:none;"></iframe>
+        <iframe src="sensors" title="Sensor Data" id="sensor_frame" style="border:none;"></iframe>
       </div>
     </div>
 
