--- a/site/index.html
+++ b/site/index.html
@@ -47,7 +47,7 @@
           <input type="checkbox" id="cbAutoRefresh">AutoRefresh</input>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="display:none">
         <div class="column">
           Gstreamer
         </div>
@@ -58,7 +58,7 @@
           <button id="btnGstStop">Stop</button>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="display:none">
         <div class="column">
           Still Frame Capture
         </div>
@@ -82,7 +82,7 @@
       </div>
       <div class="row">
         <div class="column">
-          RTP stream
+          Video stream
         </div>
         <div class="column">
           <button id="btnRTPStreamStart">Start</button>
@@ -91,7 +91,7 @@
           <button id="btnRTPStreamStop">Stop</button>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="display:none">
         <div class="column">
           Debug
         </div>
@@ -102,7 +102,7 @@
           <button id="btnGetPipelineGraph">Graph</button>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="display:none">
         <div class="column">
           Clear Videos
         </div>
