--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,9 @@
   <div class="main">
     <div class="row">
       <div class="column">
+        <img src="/static/images/sm_logo.png" alt="sm_logo" id="sm_logo">
+      </div>
+      <div class="column">
         OpalEYE
       </div>
     </div>
