--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
   <div class="main">
     <div class="row">
       <div class="column">
-        <img src="/static/images/sm_logo.png" alt="sm_logo" id="sm_logo">
+        <img src="/static/images/sm_logo.png" alt="sm_logo" id="sm_logo" height="100">
       </div>
       <div class="column">
         OpalEYE
