--- a/site/index.html
+++ b/site/index.html
@@ -115,6 +115,40 @@
       </div>
     </div>
 
+    <div id="camera-settng-table" class="cam">
+      <div class="row">
+        <div class="column">
+          Settings
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          Exposure Setting
+        </div>
+        <div class="column">
+          <form id="exposure_setting_form">
+            <input type="text" id="exposure_setting_form" name="expsosure_setting" value=100>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetExposureAbsolute">Submit</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          Exposure Mode
+        </div>
+        <div class="column">
+          <form id="exposure_mode_form">
+            <input type="text" id="exposure_mode_form" name="exposure_mode" value=0>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetExposureMode">Submit</button>
+        </div>
+      </div>
+    </div>
+
     <div id="sensor-table" class="row">
       <div class="column">
         SENSOR
