--- a/site/index.html
+++ b/site/index.html
@@ -98,7 +98,7 @@
       </div>
     </div>
 
-    <div id="stream-table" class="img">
+    <div id="stream-table" class="cam">
       <div class="row">
         <form id="ipform">
           <label for="client_ip">IP addr</label>
