--- a/site/index.html
+++ b/site/index.html
@@ -77,7 +77,7 @@
           <button id="btnVideoStop">Stop</button>
         </div>
       </div>
-      <div class="row" style="display:none">
+      <div id="debug" class="row" style="display:none">
         <div class="column">
           Debug
         </div>
@@ -167,12 +167,15 @@
       </div>
     </div>
 
-    <div id="about-table" class="row">
-      <div class="column">
+    <div id="about-table" class="cam">
+      <div class="row">
         ABOUT
       </div>
+      <div class="row">
+        <input type="checkbox" id="cbAdvancedMode">Advanced Mode</input>
+      </div>
     </div>
-
   </div>
+
 </body>
 </html>
