--- a/site/index.html
+++ b/site/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="column">
           <form id="exposure_setting_form">
-            <input type="text" id="exposure_setting_form" name="expsosure_setting" value=100>
+            <input type="text" id="exposure_setting_form_input" name="exposure_setting" value=100>
           </form>
         </div>
         <div class="column">
@@ -143,7 +143,7 @@
         </div>
         <div class="column">
           <form id="exposure_mode_form">
-            <input type="text" id="exposure_mode_form" name="exposure_mode" value=0>
+            <input type="text" id="exposure_mode_form_input" name="exposure_mode" value=0>
           </form>
         </div>
         <div class="column">
