--- a/site/index.html
+++ b/site/index.html
@@ -119,11 +119,13 @@
     </div>
 
     <div id="camera-settng-table" class="cam">
+
       <div class="row">
         <div class="column">
           Settings
         </div>
       </div>
+
       <div class="row">
         <div class="column">
           Exposure Setting
@@ -137,6 +139,7 @@
           <button id="btnSetExposureAbsolute">Submit</button>
         </div>
       </div>
+
       <div class="row">
         <div class="column">
           Exposure Mode
@@ -150,6 +153,63 @@
           <button id="btnSetExposureMode">Submit</button>
         </div>
       </div>
+
+      <div class="row">
+        <div class="column">
+          Focus Absolute
+        </div>
+        <div class="column">
+          <form id="focus_absolute_form">
+            <input type="text" id="focus_absolute_form_input" name="focus_absolute" value=0>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetFocusAbsolute">Submit</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          Focus Auto
+        </div>
+        <div class="column">
+          <form id="focus_auto_form">
+            <input type="text" id="focus_auto_form_input" name="focus_auto" value=0>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetFocusAuto">Submit</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          Brightness
+        </div>
+        <div class="column">
+          <form id="brightness_form">
+            <input type="text" id="brightness_form_input" name="brightness" value=0>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetBrightness">Submit</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          Gain
+        </div>
+        <div class="column">
+          <form id="gain_form">
+            <input type="text" id="gain_form_input" name="gain" value=0>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetGain">Submit</button>
+        </div>
+      </div>
+
     </div>
 
     <div id="sensor-table" class="row">
