--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
   <title>Camera Pod</title>
   <script type="text/javascript" src="static/scripts/jquery.js"></script>
   <script type="text/javascript" src="static/scripts/simple-jsonrpc-js.js"></script>
+  <script type="text/javascript" src="static/scripts/js.cookie.js"></script>
   <script type="text/javascript" src="camPod.js"></script>
   <link   rel="stylesheet"       href="camPod.css">
   <link   rel="shortcut icon"    type="image/jpg" href="static/images/favicon.ico">
