--- a/site/index.html
+++ b/site/index.html
@@ -119,35 +119,18 @@
       </div>
     </div>
 
-    <div id="camera-settng-table" class="cam">
-
-      <div class="row">
-        <div class="column">
-          Settings
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="column">
-          Exposure Setting
-        </div>
-        <div class="column">
-          <form id="exposure_setting_form">
-            <input type="text" id="exposure_setting_form_input" name="exposure_setting" value=100>
-          </form>
-        </div>
-        <div class="column">
-          <button id="btnSetExposureAbsolute">Submit</button>
-        </div>
-      </div>
+    <div id="camera-settng-table" class="camsettings">
 
       <div class="row">
         <div class="column">
           Exposure Mode
         </div>
         <div class="column">
+          1=manual, 3=auto
+        </div>
+        <div class="column">
           <form id="exposure_mode_form">
-            <input type="text" id="exposure_mode_form_input" name="exposure_mode" value=0>
+            <input type="text" id="exposure_mode_form_input" name="exposure_mode" value=3>
           </form>
         </div>
         <div class="column">
@@ -157,29 +140,18 @@
 
       <div class="row">
         <div class="column">
-          Focus Absolute
+          Exposure Setting
         </div>
         <div class="column">
-          <form id="focus_absolute_form">
-            <input type="text" id="focus_absolute_form_input" name="focus_absolute" value=0>
+          [3 - 2047]
+        </div>
+        <div class="column">
+          <form id="exposure_setting_form">
+            <input type="text" id="exposure_setting_form_input" name="exposure_setting" value=250>
           </form>
         </div>
         <div class="column">
-          <button id="btnSetFocusAbsolute">Submit</button>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="column">
-          Focus Auto
-        </div>
-        <div class="column">
-          <form id="focus_auto_form">
-            <input type="text" id="focus_auto_form_input" name="focus_auto" value=0>
-          </form>
-        </div>
-        <div class="column">
-          <button id="btnSetFocusAuto">Submit</button>
+          <button id="btnSetExposureAbsolute">Submit</button>
         </div>
       </div>
 
@@ -188,8 +160,11 @@
           Brightness
         </div>
         <div class="column">
+          [0 - 255]
+        </div>
+        <div class="column">
           <form id="brightness_form">
-            <input type="text" id="brightness_form_input" name="brightness" value=0>
+            <input type="text" id="brightness_form_input" name="brightness" value=128>
           </form>
         </div>
         <div class="column">
@@ -202,12 +177,51 @@
           Gain
         </div>
         <div class="column">
+          [0 - 255]
+        </div>
+        <div class="column">
           <form id="gain_form">
-            <input type="text" id="gain_form_input" name="gain" value=0>
+            <input type="text" id="gain_form_input" name="gain" value=127>
           </form>
         </div>
         <div class="column">
           <button id="btnSetGain">Submit</button>
+        </div>
+      </div>
+    </div>
+    
+    <div id="focus-settng-table" class="camsettings">
+      <div class="row">
+        <div class="column">
+          Focus Auto
+        </div>
+        <div class="column">
+          0, 1
+        </div>
+        <div class="column">
+          <form id="focus_auto_form">
+            <input type="text" id="focus_auto_form_input" name="focus_auto" value=1>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetFocusAuto">Submit</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="column">
+          Focus Absolute
+        </div>
+        <div class="column">
+          [0 - 255]
+        </div>
+        <div class="column">
+          <form id="focus_absolute_form">
+            <input type="text" id="focus_absolute_form_input" name="focus_absolute" value=0>
+          </form>
+        </div>
+        <div class="column">
+          <button id="btnSetFocusAbsolute">Submit</button>
         </div>
       </div>
 
