--- a/site/index.html
+++ b/site/index.html
@@ -103,7 +103,7 @@
       <div class="row">
         <form id="ipform">
           <label for="client_ip">IP addr</label>
-          <input type="text" id="client_ip" name="client_ip"><br><br>
+          <input type="text" id="client_ip" name="client_ip" value="127.0.0.1">
         </form>
       </div>
       <div class="row">
