--- a/site/index.html
+++ b/site/index.html
@@ -31,7 +31,7 @@
     <div class="cam">
       <div class="row">
         <div class="imgview">
-          <img src="/cameras/cam0.jpg" alt="cam0" id="cam0">
+          <img src="/api/v1/cameras/cam0/live/thumb" alt="cam0" id="cam0">
         </div>
       </div>
       <div class="row">
